--- a/.github/workflows/readme-stats.yml
+++ b/.github/workflows/readme-stats.yml
@@ -1,66 +1,48 @@
-name: Update README cards (with private repos)
+name: Update README cards
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # 每天自动更新
-  workflow_dispatch:      # 手动触发
+    - cron: "0 0 * * *" # Runs once daily at midnight
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write     # 允许提交 SVG
+      contents: write
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
-      # =======================
-      # GitHub Stats（含私库）
-      # =======================
       - name: Generate stats card
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: stats
-          options: >
-            username=${{ github.repository_owner }}
-            &show_icons=true
-            &hide_rank=true
-            &count_private=true
-            &include_all_commits=true
-            &bg_color=0D1117
-            &title_color=58A6FF
-            &icon_color=58A6FF
-            &text_color=C9D1D9
+          options: username=${{ github.repository_owner }}&show_icons=true
           path: profile/stats.svg
           token: ${{ secrets.GH_STATS_TOKEN }}
 
-      # =======================
-      # Top Languages（含私库）
-      # =======================
       - name: Generate top languages card
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: top-langs
-          options: >
-            username=${{ github.repository_owner }}
-            &layout=compact
-            &langs_count=5
-            &count_private=true
-            &bg_color=0D1117
-            &title_color=58A6FF
-            &text_color=C9D1D9
+          options: username=${{ github.repository_owner }}&layout=compact&langs_count=6
           path: profile/top-langs.svg
           token: ${{ secrets.GH_STATS_TOKEN }}
 
-      # =======================
-      # 提交生成的 SVG
-      # =======================
+      - name: Generate pin card
+        uses: readme-tools/github-readme-stats-action@v1
+        with:
+          card: pin
+          options: username=readme-tools&repo=github-readme-stats
+          path: profile/pin-readme-tools-github-readme-stats.svg
+          token: ${{ secrets.GH_STATS_TOKEN }}
+
       - name: Commit cards
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add profile/*.svg
-          git commit -m "Update README stats cards" || exit 0
+          git commit -m "Update README cards" || exit 0
           git push
