--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -18,9 +18,18 @@ jobs:
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: stats
-          options: username=${{ github.repository_owner }}&show_icons=true&count_private=true
           path: profile/stats.svg
           token: ${{ secrets.GH_STATS_TOKEN }}
+          options: >
+            username=${{ github.repository_owner }}
+            &show_icons=true
+            &count_private=true
+            &hide_border=true
+            &bg_color=0d1117
+            &title_color=58a6ff
+            &text_color=c9d1d9
+            &icon_color=58a6ff
+
 
       - name: Commit cards
         run: |
