--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -13,13 +13,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Generate stats card
+  
+      - name: Generate stats card (dark)
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: stats
-          path: profile/stats.svg
-          token: ${{ secrets.GH_STATS_TOKEN }}
           options: >
             username=${{ github.repository_owner }}
             &show_icons=true
@@ -29,8 +27,25 @@ jobs:
             &title_color=58a6ff
             &text_color=c9d1d9
             &icon_color=58a6ff
+          path: profile/stats-dark.svg
+          token: ${{ secrets.GH_STATS_TOKEN }}
 
-
+      - name: Generate stats card (light)
+        uses: readme-tools/github-readme-stats-action@v1
+        with:
+          card: stats
+          options: >
+            username=${{ github.repository_owner }}
+            &show_icons=true
+            &count_private=true
+            &hide_border=true
+            &bg_color=ffffff
+            &title_color=24292f
+            &text_color=57606a
+            &icon_color=0969da
+          path: profile/stats-light.svg
+          token: ${{ secrets.GH_STATS_TOKEN }}
+          
       - name: Commit cards
         run: |
           git config user.name "github-actions"
