--- a/.github/workflows/grs.yml
+++ b/.github/workflows/grs.yml
@@ -18,15 +18,7 @@ jobs:
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: stats
-          options: >
-            username=linmoh
-            &show_icons=true
-            &count_private=true
-            &hide_border=true
-            &bg_color=0d1117
-            &title_color=58a6ff
-            &text_color=c9d1d9
-            &icon_color=58a6ff
+          options: username=linmoh&show_icons=true&count_private=true&hide_border=true&bg_color=0d1117&title_color=58a6ff&text_color=c9d1d9&icon_color=58a6ff
           path: profile/stats-dark.svg
           token: ${{ secrets.GH_STATS_TOKEN }}
 
@@ -34,15 +26,7 @@ jobs:
         uses: readme-tools/github-readme-stats-action@v1
         with:
           card: stats
-          options: >
-            username=linmoh
-            &show_icons=true
-            &count_private=true
-            &hide_border=true
-            &bg_color=ffffff
-            &title_color=24292f
-            &text_color=57606a
-            &icon_color=0969da
+          options: username=linmoh&show_icons=true&count_private=true&hide_border=true&bg_color=ffffff&title_color=24292f&text_color=57606a&icon_color=0969da
           path: profile/stats-light.svg
           token: ${{ secrets.GH_STATS_TOKEN }}
           
